Changed the command.

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
       </p>
       <pre
         id="cmd"
-      ><code>npx evm-send -p [private_key] -r [rpc_url]</code></pre>
+      ><code>npx evm-send [bytecode] -p [private_key] -r [rpc_url]</code></pre>
       </div>
       <p id="created">Created for 
-        <a href="https://ethglobal.com/">ETH Online</a>.
+        <a href="https://ethglobal.com/">ETH Online</a>
         <img src="./ethonline.svg" alt="ETH Online" width="20"></p>
     <script type="application/javascript">
       const svgCopy =
